--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,12 @@
     <string name="upload_file">Upload File</string>
     <string name="download_file">Download File</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_google_calendar_test">GoogleCalendarTest</string>
+
+    <string name="enable_dropbox">Enable Dropbox</string>
+    <string name="dropbox_enabled">Dropbox Enabled</string>
+    <string name="enable_google_calendar">Enable Google Calendar</string>
+    <string name="google_calendar_enabled">Google Calendar Enabled</string>
+
+    <string name="start_sync">Start Sync</string>
 </resources>
